--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "cmdk": "1.0.4",
     "date-fns": "3.6.0",
     "embla-carousel-react": "8.5.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "jspdf": "^2.5.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.0.3",
